src/test/deca/context/invalid/print_01_so.deca
// Description:
//    Vérifie qu'on ne peut pas afficher de booléens
//
// Resultats:
//    On ne peut pas print de booléens.
//
// Historique:
//    cree le 13/01/2023

{
// Doit être refusé.
boolean b = true;
print(b);
}